[package]
name = "stardetect"
version = "0.2.1"
edition = "2021"
authors = ["Anshul Sanghi <anshul@anshulsanghi.tech>"]
description = "Detect star positions and sizes in an image"
homepage = "https://github.com/anshap1719/stardetect"
repository = "https://github.com/anshap1719/stardetect"
keywords = ["image", "wavelet", "multiscale", "analysis", "astronomy"]
categories = ["multimedia"]
license = "Apache-2.0"
readme = "./README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stardetect"
path = "src/main.rs"

[dependencies]
image = "0.25.0"
rayon = "1.7"
rawloader = "0.37"
imagepipe = "0.5"
thiserror = "1.0.57"
imageproc = "0.24.0"
geo = "0.28.0"
image-dwt = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
